--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>1.3.0-alpha5</version> <!-- Updated to a compatible version -->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version> <!-- Use a version compatible with logback-classic 1.2.3 -->
+            <version>1.7.30</version> <!-- Use a version compatible with logback-classic -->
         </dependency>
     </dependencies>
 
