--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,17 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.3.0-alpha5</version> <!-- Updated to a compatible version -->
+            <version>1.2.10</version> <!-- Ensure the version is compatible -->
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.30</version> <!-- Use a version compatible with logback-classic -->
+            <version>1.7.30</version> <!-- Ensure compatibility with logback-classic -->
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>1.7.30</version>
         </dependency>
     </dependencies>
 
